# local-agent-mcps

./: .gitignore  README.md
code-mcp/: pyproject.toml
code-mcp/src/code_mcp/: server.py
concept-runner-mcp/: pyproject.toml
concept-runner-mcp/src/concept_runner_mcp/: database.py  models.py  server.py
concept-runner-mcp/src/concept_runner_mcp/services/: gemini.py  pubmed.py  tavily.py
youtube-mcp/: README.md  auth_helper.py  authenticate.py  pyproject.toml
youtube-mcp/credentials/: .gitignore
youtube-mcp/src/youtube_mcp/: __init__.py  auth.py  schemas.py  server.py
youtube-mcp/src/youtube_mcp/tools/: __init__.py  analytics.py  captions.py  comments.py  manage.py  playlists.py  search.py  upload.py
